--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://terrymyc.github.io"
+baseURL = "https://yongchaoma.com"
 title = "Yongchao Ma"
 theme = "hugo-coder"
 languageCode = "en-us"
